# fld-ecc-vec

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt  _config.yml
.github/workflows/: oncici.yml
apps/bench/: bench.c  bench_Element_1w_h0h8.c  bench_Element_2w_h0h8.c  bench_Element_4w_h0h8.c  bench_ecc.c  bench_ecdh.c  bench_ed448.c  bench_eddsa.c  bench_fp.c  bench_x448.c  clocks.c  clocks.h  cpu_id.c
apps/samples/: cpu_id.c  ecdh.c  eddsa.c  field_arith.c  samples.c
apps/tests/: cpu_id.c  test_Element_1w_h0h8.c  test_Element_2w_h0h8.c  test_Element_4w_h0h8.c  test_ecdh.c  test_ed448.c  test_eddsa.c  test_fp.c  test_x448.c  tests.c  vectors.c  vectors.h
bench/: CMakeLists.txt  bench.c  bench.h  bench_ecdh.c  bench_eddsa.c  bench_fp.c  bench_hash.c  bench_third_party.c  clocks.c  clocks.h  gbench.cpp
doc/: CMakeLists.txt  gen_doc.doxyfile
examples/: CMakeLists.txt  cpu_id.c  ecdh.c  eddsa.c  field.c  hash.c  hello.c
include/: avx2.h  clocks.h  ecc.h  ecc_ed25519.h  ecc_ed448.h  eddsa_avx2.h  edwards255.h  edwards448.h  element_1w_h0h8.h  element_2w_h0h8.h  element_4w_h0h8.h  faz_ecdh_avx2.h  faz_eddsa_avx2.h  faz_fp_avx2.h  faz_hash_avx2.h  fp.h  random.h  sha3.h  sha512.h  simd_avx2.h  table_sign_w4_12k_ed25519.h  table_sign_w4_24k_ed25519.h  table_sign_w4_3675k.h  table_sign_w4_3675k_ed448.h  table_verf_w7.h  table_verf_w7_ed25519.h  table_verf_w7_ed448.h  util.h
src/: CMakeLists.txt  bytestring.c  dh255.c  dh448.c  ecc.c  ecc_ed25519.c  ecc_ed448.c  ed255.c  ed25519.c  ed448.c  eddsa_avx2.c  edwards255.c  edwards448.c  element_1w_h0h5.c  element_1w_h0h8.c  element_1w_x64.c  element_2w_h0h5.c  element_2w_h0h8.c  element_4w_h0h5.c  element_4w_h0h8.c  eltfp25519_1w_fullradix.c  eltfp25519_1w_redradix.c  eltfp25519_2w_redradix.c  eltfp25519_2w_redradix_2way.c  eltfp25519_2w_redradix_x2.c  eltfp25519_4w_redradix.c  eltfp448_1w_fullradix.c  eltfp448_1w_redradix.c  eltfp448_2w_redradix.c  eltfp448_4w_redradix.c  faz_crypto_avx2.c  faz_ecc_avx2.c  faz_ecdh_avx2.c  faz_eddsa_avx2.c  faz_fp_avx2.c  fp.c  fp255.c  fp448.c  hash255.c  ladder255.c  (+10 more)
tests/: CMakeLists.txt  FindGMP.cmake  runTests.cpp  test_ecdh.c  test_ed25519.cpp  test_eddsa.c  test_fp.c  test_fp25519_avx2.cpp  test_fp25519_x64.cpp  test_fp448_x64.cpp  test_hash255.cpp  test_x25519.cpp  tests.c  tests.h  vectors.c  vectors.h
